assets/css/main.css
/* ... */
#steleenvraag {
    float: left;
    width: 200px;
}

#formulier textarea {
    width: 400px;
    height: 100px;
    border: 1px solid #ccc;
    border-radius: 4px;
    padding: 5px;
    font-family: arial;
    color: #d3327a;
}

#formulier label, #formulier input, #formulier select {
    margin: 0 0 20px 0;
    display: block;
    padding: 5px;
}

#formlier input {
    padding: 10px;
}

#formulier .submit {
    float: left;
    padding: 5px 10px;
}

.thumbs-up {
    cursor: pointer;
}

/* USER INFO */

.user_info {
    width: 100%;
    margin: 0 0 20px 0;
}

.user_info li {
    padding: 5px 0 5px 25px;
    text-align: left;
    font-size: 13px;
    color: #323232;
}

.user_info li a {
    font-size: 13px;
    color: #323232;
    text-decoration: none;
}

.user_info li a:hover {
    text-decoration: underline;
}

.user_info li span
{
    padding-left: 25px;
}

.user_info .dark
{
    background-color: #f2f2f2;
}

.user_info .light{
    background-color: #e7e7e7;
}

.user_info .gestelde-vragen {
    background:  url('../img/ask.png') no-repeat left;
}

.user_info .beantwoorde-vragen {
    background:  url('../img/answer.png') no-repeat left;
}

.user_info .stel-een-vraag {
    background:  url('../img/stelvraag.png') no-repeat left;
}

.short_nav {
    margin: 0 25px;
}

.short_nav li {
    float: left;
}

.short_nav li a {
    background: #d3327a;
    color: white;
    padding: 4px 6px;
    border: none;
    border-radius: 4px;
    text-decoration: none;
    font-size: 13px;
}

.short_nav .edit {
    margin: 0 20px 0 0;
    float: left;
}

.short_nav .logout {
    float: right;
}

.errors
{
    font-size: 12px;
    color: #f00;
}

#c1
{
     background: url("../img/categories/1.png");
}

#c2
{
     background: url("../img/categories/2.png");
}

#c3
{
     background: url("../img/categories/3.png");
}

#c4
{
     background: url("../img/categories/4.png");
}

#c5
{
     background: url("../img/categories/5.png");
}

#c6
{
     background: url("../img/categories/6.png");
}

#c7
{
    background: url("../img/categories/7.png");
}

#c8
{
     background: url("../img/categories/8.png");
}

#c9
{
     background: url("../img/categories/9.png") no-repeat center;
}

#c10
{
     background: url("../img/categories/10.png");
}

#c11
{
     background: url("../img/categories/11.png");
}

#c12
{
     background: url("../img/categories/12.png");
}

.fb-share { 
    display: block;
    float: left;
    background: url("../img/share_fb.png");
    height: 26px;
    width: 77px;
    text-indent: 9999px;
    margin: 0 10px 0 0;
}

.twitter-share { 
    display: block;
    background: url("../img/share_tweet.png");
    height: 26px;
    width: 79px;
    text-indent: 9999px;
    float: left;
    margin: -1px 0 0 0;
}

.preview img {
    border: 1px dashed #ccc;
    margin: 0 0 10px 0;
}

